zone list 가져오는 내용 구현
